--- a/src/todo.txt
+++ b/src/todo.txt
@@ -1,3 +1,5 @@
+- DummpDB: output edge lists, too.
+
 - getNeighbours/getEdges: gets a comparison object and if the matched item is free, it returns. If locked by an other transaction, throws Exception.
 
 - Partial reading of RecordChain in 2 steps:
@@ -8,8 +10,8 @@
 	-get payload.
 - This feature can be switched off: always read complete chain.
 
-- Graph elems after a transaction retain key even if multithreading - split NND?
-  The application must be preapred of concurrent lock or delete.
+- Eliminate static stuff and make these relative to Database. This will enable
+  use of databases with different design in an application.
 
 - Utility to list / delete orphaned nodes. The applications must avoid orphaning nodes, so this is a debug tool.
 
