Several features, most not tested yet.
-Enable clearing a record chain before reading it from disc.
-Minor cleanup in RecordChain::hashCollect, making it public.
-Small auxiliary class AutoDeleter for automatic array deallocation.
-Database::attach for re-attaching detached (GEState DK) graph elems.
-Some refinement of transaction management to allow RAII-style automatic
abort if an exception exits the method containing the Transaction
instance as a local variable.
-Possibility to query
	-an end of an edge
	-edges of a node using optional filtering on payload
-Filter mechanism and payload type filter implementation for getting
edges and neighbouring nodes of an edge.
-Refinement of checking if a graph elem is an edge or a node.

--- a/src/todo.txt
+++ b/src/todo.txt
@@ -1,3 +1,5 @@
+- Revise Doxygen docs: include exception names, document arguments and return values.
+
 - DummpDB: output edge lists, too.
 
 - getNeighbours/getEdges: gets a comparison object and if the matched item is free, it returns. If locked by an other transaction, throws Exception.
